trunk/Archive2/47/1039243ea6c03a/output
main.cpp: In function ‘int main()’:
main.cpp:34:41: error: conversion from ‘std::tuple<int, float, double, bool, char, short int, int*, float*, double*>’ to non-scalar type ‘main()::<anonymous struct>’ requested
     struct{} _ = my_tuple_cat(t1, t2, t3);
                                         ^
